--- a/abstract.tex
+++ b/abstract.tex
@@ -21,14 +21,14 @@ This thesis presents a new technique for real-valued multimodal optimization.
 Most of the real-world problems can be described as a composition of uni-modal subproblems.
 For real-valued optimization, we are interested in problems that are composed of \textit{multiple hierarchically decomposable} uni-modals.
 However, allocating resources to exploit different uni-modals leads to the 
-common delimma between \textit{exploration} and \textit{exploitation}.
+common dilemma between \textit{exploration} and \textit{exploitation}.
 This thesis proposed some new techniques that aim to solve multimodal problems more efficiently.
 A new technique combining hierarchical clustering and minimum description length (MDL) 
 is proposed to help identify potential uni-modals in the search space.
 Then, a linear transform matrix in homogeneous coordinate, optimized by the (1+1)-Evolutionary Strategy,
 projects the search space to a subspace with well-defined boundary.
 This projection aims to define a region of interest (ROI) that isolates a uni-modal subproblem.
-Finally, a new multi-armed bandit technique, aiming to maximize the probability of aquiring the global optimium,
+Finally, a new multi-armed bandit technique, aiming to maximize the probability of acquiring the global optimum,
 is proposed to allocate resources for each uni-modal.
 We combined our new techniques with Covariance Matrix Adaptation Evolution Strategy (CMA-ES), 
 Standard Particle Swarm Optimization (SPSO) 2011, and Ant Colony Optimization for Continuous Domain (ACO$_R$).
