--- a/clustering_techniques.tex
+++ b/clustering_techniques.tex
@@ -226,7 +226,7 @@ As mentioned before, we need to solve the problem of having too many ``ripple'' 
 Here we would like to use the MDL Equation to calculate model efficiency, and trim down unnecessary clusters.
 Therefore, after identifying potential unimodals with hierarchical clustering in Section~\ref{section:hierarchical},
 we use Equation~\ref{equation:MDL} to calculate model efficiency.
-We created mutliple weighted Gaussian distribution according to the hierarchical clusters, 
+We created multiple weighted Gaussian distribution according to the hierarchical clusters, 
 as shown in Figure~\ref{fig:MDL_comparison}(a) and Figure~\ref{fig:MDL_comparison_F19}(a).
 Then we try all combinations of merging two clusters and calculate the corresponding MDL.
 Therefore, we compare the MDL score between the original hierarchical clusters and the new clusters with the minimal MDL score.
