--- a/conclusion.tex
+++ b/conclusion.tex
@@ -8,22 +8,22 @@ We also manage the ratio between exploration and exploitation according to the r
 so that the optimization process can be more efficient.
 
 First, we proposed a unimodal detection technique to find potential \textit{fitness hills} in a real-valued multimodal problem 
-by hierarchical clustering and Minimum Descriptioni Length.
+by hierarchical clustering and Minimum Description Length.
 It depicts the underlying \textit{fitness hills} better than K-Means.
 Also unlike K-Means which needs to collaborate with other methods to determine the number of clusters,
 our technique intrinsically detects the number of potential unimodals.
 
-Second, we also proposed a method to seperate the search space into smaller subspaces in order to enhance performance.
+Second, we also proposed a method to separate the search space into smaller subspaces in order to enhance performance.
 We use linear projection matrix to project the search space to a subspace with well-defined boundaries for feasible solutions.
-Therefore, the algorithm only needs to search within a hypercube, constrined by $[0,1]$ in all dimensions.
-This technique is perferable for algorithms that requires a box-shape boundaries.
+Therefore, the algorithm only needs to search within a hypercube, constrained by $[0,1]$ in all dimensions.
+This technique is preferable for algorithms that requires a box-shape boundaries.
 It also creates ROIs on the original search space that isolates the unimodals.
 We also use the (1+1)-ES to optimize the projection matrix so that the ROIs have minimal-overlapping, thus enhance the searching efficiency.
 By cracking down the original search space into multiple non-overlapping subspace, 
-alogrithms now only have to search a smaller portion of the landscape which ideally consists of only one unimodal.
+algorithms now only have to search a smaller portion of the landscape which ideally consists of only one unimodal.
 
 Furthermore, we proposed a new Multi-armed Bandit techniques that optimize the resource allocation.
-We also explained how to maintain a more stablize cluster shapes during \textit{recluster}, 
+We also explained how to maintain a more stabilize cluster shapes during \textit{recluster}, 
 yet still conserve the flexibility to split when needed.
 We believe that in the beginning, when there are abundant of resources left, we should invest more resources in exploration.
 That means we should update each clusters more equally for exploration.
@@ -39,7 +39,7 @@ that need to move for a long distance after converging to a relatively narrow va
 Also, the clustering techniques to identify underlying unimodals can be further improved.
 The current hierarchical clustering technique can be extended to a complete tree that contains all clusters.
 Moreover, since this technique is composed of many relatively complex methods, 
-speeding up computational time is also a crutial issue for all hyperparameters tuning techniques.
+speeding up computational time is also a crucial issue for all hyperparameters tuning techniques.
 
 
 
